cabal-version: 1.12

name:           esqueleto-postgresql-ltree
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/simspace/postgresql-ltree#readme>
synopsis:       Helpers for using ltree with esqueleto
category:       Database
homepage:       https://github.com/simspace/postgresql-ltree#readme
bug-reports:    https://github.com/simspace/postgresql-ltree/issues
author:         Cary Robbins
maintainer:     carymrobbins@gmail.com
copyright:      2022 SimSpace
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/simspace/postgresql-ltree

library
  exposed-modules:
      Database.Esqueleto.Postgresql.LTree
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , esqueleto >=3.4.2 && <4
    , postgresql-ltree >=0.0.0.0 && <1
  default-language: Haskell2010
  ghc-options:
    -Wall -fwarn-tabs -Wincomplete-uni-patterns
    -Werror=missing-home-modules -eventlog +RTS -A32M -RTS
