cabal-version: 1.12

name:           persistent-postgresql-ltree
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/simspace/postgresql-ltree#readme>
synopsis:       Instances for using ltree with postgresql-simple
category:       Database
homepage:       https://github.com/simspace/postgresql-ltree#readme
bug-reports:    https://github.com/simspace/postgresql-ltree/issues
author:         Cary Robbins
maintainer:     carymrobbins@gmail.com
copyright:      2022 SimSpace
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/simspace/postgresql-ltree

library
  exposed-modules:
      Database.Persist.Postgresql.LTree
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , persistent >=2.13.2 && <3
    , postgresql-ltree >=0.0.0.0 && <1
    , text >=1.2.3 && <2
  default-language: Haskell2010
  ghc-options:
    -Wall -fwarn-tabs -Wincomplete-uni-patterns
    -Werror=missing-home-modules -eventlog +RTS -A32M -RTS
